# 2022-fall-ntu

./: README.md
Final/Dilithium/: LICENSE.txt  README.md
Final/EMG-based_Gesture_Recognition_using_HDC/: README.md
Final/EMG-based_Gesture_Recognition_using_HDC/data/: IM.csv  README.md  test_label.csv
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/: LICENSE  README.md
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/: CMakeLists.txt  deploy_pp.sh  deploy_pp_release.sh  perf_out.txt  prepare_env.sh
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/cmake/: config.cmake.in
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/: CMakeLists.txt
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/include/vitis/ai/: pointpillars.hpp
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/src/: finn_cpp_driver.cpp  finn_cpp_driver.hpp  helper.hpp  packing.cpp  packing.hpp  pfn.cpp  pfn.hpp  pointpillars.cpp  pointpillars_imp.cpp  pointpillars_imp.hpp  preprocess.cpp  preprocess.hpp  types.hpp  utils.cpp  utils.hpp  xcl2.hpp
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/src/postprocess/: anchor.cpp  parse_display_result.cpp  pointpillars_post.cpp  pointpillars_post.hpp
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/src/vai_includes/: profiling.hpp
Final/Fast_Object_Detection_from_Point_Clouds_for_Autonomous_Driving/src/FINN_main/Vitis-AI-Library/pointpillars/test/: test_clock.cpp  test_performance_pointpillars_2.cpp  test_performance_pointpillars_singlethread.cpp  test_pfn.cpp  test_pointpillars.cpp  test_pointpillars_accuracy_2 copy.cpp  time_measure.cpp
Final/Handwritten_number_Generation_on_PYNQ-Z2/: LICENSE  README.md
Final/Handwritten_number_Generation_on_PYNQ-Z2/docs/: HLS Final presentation (T9).pptx
Final/High_Accuracy_Image_Classifier_Inference_on_PYNQ-Z2/: LICENSE  README.md  requirements.txt
Final/High_Accuracy_Image_Classifier_Inference_on_PYNQ-Z2/data/: README.md
Final/High_Accuracy_Image_Classifier_Inference_on_PYNQ-Z2/docs/: Final_present_T8.pptx  Final_proposal_T8.pptx  T8_final_report.docx
Final/High_Accuracy_Image_Classifier_Inference_on_PYNQ-Z2/impl_result/: finn_lightweight_resnet8_acc84.51.onnx  finn_maxutilized_resnet8_acc89.33.onnx
Final/High_Accuracy_Image_Classifier_Inference_on_PYNQ-Z2/src/: ResNet_training.py
Final/Message-Communication/: Readme.md
Final/Message-Communication/data/: cat.qoi  checker.qoi
Final/Message-Communication/docs/: T6_final_report.docx
Final/Message-Communication/imp_result/: imp.xpr  top.bit
Final/Message-Communication/src/: common.hpp  polar_code.hpp  polar_decoder.cpp  polar_encoder.cpp  qoi.cpp  qoi.hpp  testbench.cpp  top.cpp  top.hpp
Final/Object-Detection-Inference-On-PYNQ-Z2/: LICENSE  README.md
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/: LICENSE  README.md
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/data/: README.md
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/docs/: T4_final_report.docx
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/impl_result/: viso
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/report/: binary_container_1.xclbin.link_summary  device_trace_0.csv  hal_host_trace.csv  opencl_trace.csv  summary.csv  xrt.run_summary
Final/The_Hardware_Acceleration_of_Monocular_Visual_Odometry/src/: README.md
LabA/Dataflow_Debug_and_Optimization/dataflow/: diamond.cpp
LabA/Dataflow_Debug_and_Optimization/deadlock/: example.cpp  example_test.cpp
LabA/Design_Analysis/lab1/: dct.cpp  dct_test.cpp  run_hls.tcl
LabA/Design_Optimization/: README.md
LabA/Design_Optimization/lab1/: matrixmul.cpp  matrixmul_test.cpp  run_hls.tcl
LabA/Design_Optimization/lab2/: csynth.rpt  matrixmul.cpp  matrixmul_csynth.rpt  matrixmul_test.cpp
LabA/Host_Code_Optimization/: AAHLS_presentation (1).pptx  README.md
LabA/Host_Code_Optimization/reference-files/: .gitignore  Makefile  description.json  design.cfg  multi_params.json
LabA/Host_Code_Optimization/script/: run_host-code-opt.sh
LabA/Interface_Synthesis/lab1/: adders.c  adders.h  run_hls.tcl
LabA/Interface_Synthesis/lab2/: run_hls.tcl
LabA/Interface_Synthesis/lab3/: run_hls.tcl
LabA/Interface_Synthesis/lab4/: run_hls.tcl
LabA/RTL_kernel_workflow_and_Mixing_C++_and_RTL_Kernels/: README.md
LabA/RTL_kernel_workflow_and_Mixing_C++_and_RTL_Kernels/01_rtl_kernel_flow/: Vadd_A_B.xo  user-host.cpp
LabB/Bloom_Filter/: .gitattributes  .gitignore  README.md  r09943161_labB_presentation.pptx
LabB/CORDIC/: README.md  r10525034_labB_presentation.pptx
LabB/CORDIC/cordic_LUT/: cordiccart2pol.cpp  cordiccart2pol.design.xml  cordiccart2pol.h  cordiccart2pol_csynth.rpt  cordiccart2pol_test.cpp  csynth.rpt  csynth.xml  script.tcl
LabB/CORDIC/cordic_baseline/: cordiccart2pol.cpp  cordiccart2pol.design.xml  cordiccart2pol.h  cordiccart2pol_csynth.rpt  cordiccart2pol_test.cpp  csynth.rpt  (+2 more)
LabB/Cholesky_Algorithm/: d10943019_labB_presentation.pptx
LabB/DFT/: dft.cpp  dft.h  dft_test.cpp  r10943012_labB_presentation.pptx
LabB/FFT/: fft.bit  fft.hwh  r11943003_labB_presentation.pptx
LabB/FIR/: README.md  r10943119_labB_presentation.pptx
LabB/Matrix_Multiplication/: BlockBatrix_testbench.cpp  BlockMatrix_design.cpp  BlockMatrix_design.h  Brutal_design.cpp  Brutal_design.h  Brutal_testbench.cpp  README.md  directives.tcl  run_sim.tcl  script.tcl  script_block.tcl  script_brutal.tcl
LabB/systolic_array/: d06943017_labB_presentation.pptx  vitis_analyzer_pid1210929.str  xrt.run_summary
LabC/Cordic_FAST_Serialization/: README.md
LabC/DFT_CANNY_Serialization/: .gitattributes
LabC/DFT_HARRIS_Betweenness/: .gitignore  README.md
(+16932 files in other folders)
